--- a/src/components/NavigationBar/NavigationBar.module.scss
+++ b/src/components/NavigationBar/NavigationBar.module.scss
@@ -1,16 +1,36 @@
 $primary-color: #cfd9e0;
-.container {
-  .navbarRoot {
-    background-color: #0b2239;
-    .brand {
-      color: $primary-color;
+.navbar {
+  position: sticky;
+  top: 0;
+  background-color: #0b2239;
+  .toggle {
+    padding: 0;
+    border: none;
+    display: none;
+    .closeIcon {
+      color: white;
     }
-    .link {
-      color: $primary-color !important;
-      font-size: 14px;
+    .hamburgerIcon {
+      color: white;
     }
-    .link:hover {
-      color: rgb(195, 194, 194) !important;
+  }
+  .brand {
+    margin-right: 30px;
+    font-weight: bold;
+    color: $primary-color !important;
+  }
+  .link {
+    color: $primary-color !important;
+    font-size: 14px;
+  }
+  .link:hover {
+    color: rgb(195, 194, 194) !important;
+  }
+}
+@media (min-width: 320px) and (max-width: 767.98px) {
+  .navbar {
+    .toggle {
+      display: block;
     }
   }
 }
