--- a/src/components/Banner/SearchBanner/SearchBanner.module.scss
+++ b/src/components/Banner/SearchBanner/SearchBanner.module.scss
@@ -10,13 +10,16 @@ $defaultHeight: 60px;
     background-color: #eff3f6;
     // padding: 10px;
     border-radius: 5px;
-    .dropdown {
-      color: #5f7d95;
-      font-weight: 400;
-      display: flex;
-      align-items: center;
-      padding-left: 20px;
-      cursor: pointer;
+    .dropdownWrap {
+      position: relative;
+      .dropdown {
+        color: #5f7d95;
+        font-weight: 400;
+        display: flex;
+        align-items: center;
+        padding-left: 20px;
+        cursor: pointer;
+      }
     }
     .searchInput {
       color: #5f7d95;
