--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -3,13 +3,21 @@
     background-color: white !important;
   }
   .title {
-    font-weight: 600;
+    font-weight: 800;
     text-align: center;
     margin-bottom: 30px;
     color: #0b2239;
   }
   .subTitle {
+    font-size: 16px;
     text-align: center;
+  }
+}
+@media (max-width: 576px) {
+  .banner {
+    .title {
+      display: none;
+    }
   }
 }
 @media screen and (min-width: 480px) {
