--- a/src/components/GridContainer/GridContainer.module.scss
+++ b/src/components/GridContainer/GridContainer.module.scss
@@ -1,9 +1,10 @@
 @mixin gridCol($value) {
-  .GridContainer {
+  .gridContainer {
     grid-template-columns: repeat($value, minmax(0, 1fr));
   }
 }
 .gridContainer {
+  padding: 10px;
   display: grid;
   grid-gap: 0.25rem;
   gap: 0.25rem;
@@ -17,9 +18,9 @@
 @media (min-width: 768px) {
   @include gridCol(2);
 }
-@media (min-width: 1024px) {
+@media (min-width: 992px) {
   @include gridCol(3);
 }
-@media (min-width: 1366px) {
-  @include gridCol(3);
+@media (min-width: 1200px) {
+  @include gridCol(4);
 }
