--- a/src/components/IconPacks/IconPacks.module.scss
+++ b/src/components/IconPacks/IconPacks.module.scss
@@ -22,13 +22,8 @@
   .loading {
     display: flex;
     justify-content: flex-end;
-  }
-
-  .loading > * {
-    margin-right: 20px;
-    color: #3fb5b5 !important;
-    width: 25px !important;
-    height: 25px !important;
+    margin-top: 10px;
+    margin-right: 10px;
   }
   .pagenation {
     align-items: center;
