--- a/src/components/SearchIcon/SearchIcon.module.scss
+++ b/src/components/SearchIcon/SearchIcon.module.scss
@@ -1,8 +1,27 @@
+@import '../ButtonSCSS/ButtonSCSS.scss';
 .searchIcon {
   .loading {
     display: flex;
     justify-content: flex-end;
     margin-top: 10px;
     margin-right: 10px;
+  }
+  .pagenation {
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+    margin-right: 10px;
+    .arrowBack {
+      @include button();
+    }
+    .pageNumber {
+      color: #0277bd;
+      font-weight: 600;
+      margin: 0;
+    }
+    .arrowForward {
+      @include button();
+    }
   }
 }
