--- a/src/components/Progress/LoadingCircle/LoadingCircle.module.scss
+++ b/src/components/Progress/LoadingCircle/LoadingCircle.module.scss
@@ -1,3 +1,9 @@
+.loading {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+  margin-right: 10px;
+}
 .loading > * {
   // margin-right: 20px;
   color: #3fb5b5 !important;
