--- a/src/components/CardIconPack/CardIconPack.module.scss
+++ b/src/components/CardIconPack/CardIconPack.module.scss
@@ -1,8 +1,10 @@
 .cardIconPack {
-  border: 1px solid rgb(216, 216, 216);
   width: 100%;
-  transition: all ease-in-out 0.1s;
+  transition: all ease 0.2s;
   cursor: pointer;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   .imageThumb {
     img {
       width: 300px;
@@ -28,5 +30,6 @@
   }
 }
 .cardIconPack:hover {
-  border: 1px solid rgb(155, 155, 155);
+  box-shadow: rgb(114, 114, 114) 0px 1px 3px 0px,
+    rgb(69, 79, 90) 0px 0px 0px 1px;
 }
