--- a/src/components/ModalDetailPack/ModalDetailPack.module.scss
+++ b/src/components/ModalDetailPack/ModalDetailPack.module.scss
@@ -25,7 +25,16 @@
   }
   .content1 {
     p {
-      margin: 1px !important;
+      margin: 1px;
+    }
+    .tags {
+      color: #42a5f5;
+      margin: 2px;
+      cursor: pointer;
+      &:hover {
+        color: #64b5f6;
+        text-decoration: underline;
+      }
     }
   }
 }
