--- a/src/components/ModalDetailPack/ModalDetailPack.module.scss
+++ b/src/components/ModalDetailPack/ModalDetailPack.module.scss
@@ -6,6 +6,7 @@
     font-size: 24px;
   }
 }
+
 .contents {
   color: white;
   .wrap {
@@ -27,6 +28,11 @@
     p {
       margin: 1px;
     }
+    .wrapTags {
+      p {
+        display: contents;
+      }
+    }
     .tags {
       color: #42a5f5;
       margin: 2px;
@@ -35,6 +41,21 @@
         color: #64b5f6;
         text-decoration: underline;
       }
+    }
+  }
+}
+@media (max-width: 576px) {
+  .wrapModal {
+    height: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .contents {
+    .wrap {
+      flex-direction: column;
+    }
+    .imageBox {
+      margin: auto;
     }
   }
 }
