--- a/src/components/ModalDetailIcon/ModalDetailIcon.module.scss
+++ b/src/components/ModalDetailIcon/ModalDetailIcon.module.scss
@@ -41,20 +41,35 @@
         text-decoration: underline;
       }
     }
+    .selectResolution {
+      appearance: none;
+      margin-top: 10px;
+      outline: 0;
+      padding: 5px;
+      // width: 100px;
+      background: #039be5;
+      border: none;
+      color: white;
+      border-radius: 5px;
+    }
+    .selectFormat {
+      label {
+        margin: 5px;
+      }
+      input {
+        margin: 5px;
+      }
+    }
   }
 }
-@media (max-width: 576px) {
-  .wrapModal {
-    height: 100%;
-  }
-}
+
 @media (max-width: 768px) {
   .contents {
     .wrap {
       flex-direction: column;
     }
     .imageBox {
-      margin: auto;
+      margin: 10px auto;
     }
   }
 }
