--- a/src/components/NavigationBar/NavigationBar.module.scss
+++ b/src/components/NavigationBar/NavigationBar.module.scss
@@ -18,6 +18,7 @@ $primary-color: #cfd9e0;
     margin-right: 30px;
     font-weight: bold;
     color: $primary-color !important;
+    text-decoration: none;
   }
   .link {
     color: $primary-color !important;
